# Black-Box-Labs

./: .env.example  .gitignore  LICENSE  README.md  app.py  config.py  debug_vlm.py  orchestrator.py  pyproject.toml  session.py
agent/: __init__.py  client.py  scientist.py  tools.py
evaluator/: __init__.py  attention.py  vlm.py
generator/: __init__.py  isomorphic.py  renderer.py  state.py
generator/templates/: counting_scene.html
tests/: test_evaluator.py  test_orchestrator.py  test_state.py
